--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@ if (kahroba && typeof kahroba.pc === 'number') {
     animateElement('profit-box', `
       <div class="text-2xl font-extrabold drop-shadow-lg text-purple-800">صندوق کهربا (${toPersianNumber(kahroba_UNITS.toLocaleString())} واحد)</div>
       <div class="text-2xl font-extrabold drop-shadow-lg text-black mt-2">${toPersianNumber(result)}</div>
-      <div class="text-xl font-bold drop-shadow-lg" style="color:${kahrobaProfitColor}">(${toPersianNumber(kahrobaProfitPercent.toFixed(2))}%)</div>
+      <div class="text-xl font-bold drop-shadow-lg" style="color:${kahrobaProfitColor}">بازدهی: (${toPersianNumber(kahrobaProfitPercent.toFixed(2))}%)</div>
+
     `);
 
     // سود/زیان بیت کوین
@@ -278,7 +279,7 @@ if (kahroba && typeof kahroba.pc === 'number') {
     const btcBox = document.getElementById('crypto-box');
     if (btcBox) {
       btcBox.innerHTML += `
-        <div class="text-xl font-bold drop-shadow-lg" style="color:${btcProfitColor}">بازدهی بیت‌کوین: (${toPersianNumber(btcProfitPercent.toFixed(2))}%)</div>
+        <div class="text-xl font-bold drop-shadow-lg" style="color:${btcProfitColor}">بازدهی: (${toPersianNumber(btcProfitPercent.toFixed(2))}%)</div>
       `;
     }
 
