--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <title>پورتفوی سرمایه گذاری</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+
+  <!-- 🪙 Favicon کلاسیک -->
+  <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
+
+  <!-- 📱 آیکن برای اندروید و مرورگرها -->
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
+
+  <!-- 🍎 آیکن برای iPhone / iPad -->
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+
+  <!-- 🧭 رنگ نوار مرورگر -->
+  <meta name="theme-color" content="#250987">
+
+  <!-- 🧭 جهت نمایش درست در iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <style>
     * { font-family: 'Vazirmatn', sans-serif !important; }
     .persian-numbers { font-feature-settings: "ss01"; direction: rtl; }
