--- a/index.html
+++ b/index.html
@@ -315,6 +315,12 @@ if (kahroba && typeof kahroba.pc === 'number') {
     if (profitEl) {
        profitEl.style.color = profitColor;
        profitEl.innerText = `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)`;
+      const days = (typeof diffDays === 'number' && diffDays > 0) ? diffDays : 1;
+       const dailyPercent = profitPercent / days;
+
+       // نمایش: مقدار کل و درصد کل و در خط دوم بازدهی روزانه (چهار رقم اعشار)
+       profitEl.innerHTML = `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +
+                            `<div style="font-size:0.85em; margin-top:6px;">بازدهی روزانه: ${toPersianNumber(Math.abs(dailyPercent).toFixed(4))}%</div>`;
     }
 }
 
