--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </style>
 </head>
 <body class="bg-yellow-400 text-black">
-  <main class="max-w-xl mx-auto p-3 space-y-2">
+  <main class="max-w-xl mx-auto p-3 space-y-1">
     <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
-       <button id="refresh-btn" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش سرمایه گذاری ها</button>
+       <button id="refresh-btn" class="text-white text-base font-bold w-full">🔄 بروزرسانی ارزش سرمایه گذاری ها</button>
     </section>
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center border-2 border-blue-700">
