--- a/index.html
+++ b/index.html
@@ -317,10 +317,15 @@ if (kahroba && typeof kahroba.pc === 'number') {
        profitEl.innerText = `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)`;
       const days = (typeof diffDays === 'number' && diffDays > 0) ? diffDays : 1;
        const dailyPercent = profitPercent / days;
+       const monthlyPercent = dailyPercent * 30;
 
        // نمایش: مقدار کل و درصد کل و در خط دوم بازدهی روزانه (چهار رقم اعشار)
-       profitEl.innerHTML = `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +
-                            `<div style="font-size:0.85em; margin-top:6px;">بازدهی روزانه: ${toPersianNumber(Math.abs(dailyPercent).toFixed(4))}%</div>`;
+       profitEl.innerHTML = 
+    `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +         
+    `<div style="font-size:0.85em; margin-top:6px;">
+        بازدهی روزانه: ${toPersianNumber(Math.abs(dailyPercent).toFixed(4))}%  
+        - بازدهی ماهانه: ${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}%
+    </div>`;
     }
 }
 
