--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body class="bg-yellow-400 text-black">
   <main class="max-w-xl mx-auto p-3 space-y-1">
-    <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
-       <button id="refresh-btn" class="text-white text-base font-bold w-full">🔄 بروزرسانی ارزش سرمایه گذاری ها</button>
+    <section class="bg-purple-800 rounded-xl shadow-2xl p-2 text-center">
+       <button id="refresh-btn" class="text-white text-base w-full">🔄 بروزرسانی ارزش سرمایه گذاری ها</button>
     </section>
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center border-2 border-blue-700">
