--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <section id="gold-bubble" class="rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
+    <section id="gold-bubble" class="rounded-xl shadow-2xl p-2 text-center font-bold text-white persian-numbers">
       حباب طلای ۱۸ عیار: <span id="goldbubble"></span>
     </section>
 
