--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <section id="gold-bubble" class="rounded-xl shadow-2xl p-2 text-center font-bold text-white persian-numbers">
+    <section id="gold-bubble" class="rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
       حباب طلای ۱۸ عیار: <span id="goldbubble"></span>
     </section>
 
@@ -322,7 +322,7 @@ if (kahroba && typeof kahroba.pc === 'number') {
        // نمایش: مقدار کل و درصد کل و در خط دوم بازدهی روزانه (چهار رقم اعشار)
        profitEl.innerHTML = 
     `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +         
-    `<div style="font-size:0.7em; margin-top:5px;">
+    `<div style="font-size:0.75em; margin-top:5px;">
         متوسط بازدهی روزانه: ${toPersianNumber(Math.abs(dailyPercent).toFixed(2))}%  
     - متوسط بازدهی ماهانه: ${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}%
     </div>`;
