--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ if (kahroba && typeof kahroba.pc === 'number') {
     `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +         
     `<div style="font-size:0.75em; margin-top:5px; text-align:center;">
         ADR: ${toPersianNumber(Math.abs(dailyPercent).toFixed(2))}%  
-        AMR: ${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}%
+         -  AMR: ${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}%
     </div>`;
     }
 }
