--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@ if (kahroba && typeof kahroba.pc === 'number') {
        profitEl.innerHTML = 
     `بازدهی کل: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)` +         
     `<div style="font-size:0.75em; margin-top:5px;">
-        ADR: ${toPersianNumber(Math.abs(dailyPercent).toFixed(2))}%  
-         -  AMR: ${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}%
+        ADR: %${toPersianNumber(Math.abs(dailyPercent).toFixed(2))}  
+         -  AMR: %${toPersianNumber(Math.abs(monthlyPercent).toFixed(2))}
     </div>`;
     }
 }
