--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </section>
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers border-2 border-blue-700">
-      <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
-      <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">مقدار ریالی سرمایه گذاری: ۱۴۳۰۰۰</p>
+      <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">در حال محاسبه میزان سرمایه گذاری...</h3>
+      <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">در حال محاسبه میزان دارایی...</p>
       <p id="merged-value" class="text-xl font-bold persian-numbers text-black mt-2 drop-shadow-lg"></p>
       <p id="profit-percent" class="text-xl font-bold persian-numbers mt-2 drop-shadow-lg"></p>
     </section>
